[package]
name = "watermarker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
indicatif = "0.17.5"
rand = "0.8.5"
tokio = { version = "1.29.0", features = ["full"] }
colored = "2.0.0"
