[package]
name = "watermarker"
version = "0.3.0"
authors = ["Francesco Michele Barranca kalairendev@francescobarranca.dev"]
license = "GPL-3.0"
description = "A cli tool to watermark images with smaller images"
readme = "README.md"
homepage = "https://github.com/Francesco99975/watermarker"
repository = "https://github.com/Francesco99975/watermarker"
keywords = ["cli", "watermark", "images", "tools", "modification"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
indicatif = "0.17.5"
rand = "0.8.5"
tokio = { version = "1.29.0", features = ["full"] }
colored = "2.0.0"
